--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,9 @@
-version: '3.8' 
  
 services: 
   db: 
     image: mysql:5.7 
     container_name: mysql_db 
-    restart: always 
+    restart: unless-stopped  # Changed from 'always'
     environment: 
       MYSQL_ROOT_PASSWORD: rootpassword 
       MYSQL_DATABASE: wordpress 
