Fix, down previously open wp_cli container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
   wordpress: 
     image: wordpress:latest 
     container_name: wordpress_app 
-    restart: always 
+    restart: unless-stopped  # Changed from 'always'
     depends_on: 
       - db 
     environment: 
