--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,7 @@ services:
       - wordpress
     volumes:
       - wp_data:/var/www/html
+      - ./wp-cli-test-command.php:/var/www/html/wp-cli-test-command.php  # Add this line
     environment:
       WORDPRESS_DB_HOST: db:3306
       WORDPRESS_DB_USER: wpuser
