Fix wp-config not writable

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,8 @@ services:
     entrypoint: >
       sh -c '
         chown -R www-data:www-data /var/www/html &&
+        find /var/www/html -type d -exec chmod 775 {} \; &&
+        find /var/www/html -type f -exec chmod 664 {} \; &&
         docker-entrypoint.sh apache2-foreground
       '
 
