--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,8 +40,7 @@ services:
         docker-entrypoint.sh apache2-foreground
       '
   sonarqube:
-    image: sonarqube:9.9.1-community
-
+    image: sonarqube:latest
     container_name: sonarqube
     ports:
       - "9000:9000"
