--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,8 +30,6 @@ services:
       WORDPRESS_DB_USER: wpuser 
       WORDPRESS_DB_PASSWORD: wppassword 
       WORDPRESS_DB_NAME: wordpress 
-    ports: 
-      - "8080:80" 
     volumes: 
       - wp_data:/var/www/html 
     entrypoint: >
@@ -41,6 +39,7 @@ services:
         find /var/www/html -type f -exec chmod 664 {} \; &&
         docker-entrypoint.sh apache2-foreground
       '
+
 
   wp-cli:
     image: wordpress:cli
@@ -57,8 +56,6 @@ services:
       WORDPRESS_DB_NAME: wordpress
     command: >
       sh -c '
-        # Ensure write access for www-data user
-        chown -R 33:33 /var/www/html
         # Make wp-config.php writable
         chmod 666 /var/www/html/wp-config.php || true
 
@@ -66,6 +63,10 @@ services:
         wp --require=/var/www/html/wp-cli-test-command.php cli info
         tail -f /dev/null
       '
+    # This command will keep the container running for testing purposes
+    # You can replace it with your actual command later
 volumes: 
   db_data: 
   wp_data: 
+  sonarqube_data:
+  sonarqube_extensions:
