--- a/Ansible/Install_Docker_Jenkins.yml
+++ b/Ansible/Install_Docker_Jenkins.yml
@@ -111,6 +111,18 @@
       ignore_errors: yes
       become: true
 
+    - name: Open Jenkins port (3000) in firewall (if ufw is enabled)
+      ufw:
+        rule: allow
+        port: '3000'
+        proto: tcp
+      ignore_errors: yes
+      become: true
+
+    - name: Reload ufw
+      command: ufw reload
+      ignore_errors: yes
+
 
     
     - name: Get /var/lib/jenkins/secrets/initialAdminPassword
