Update Install_Docker_Jenkins.yml open port 22

--- a/Ansible/Install_Docker_Jenkins.yml
+++ b/Ansible/Install_Docker_Jenkins.yml
@@ -119,6 +119,14 @@
       ignore_errors: yes
       become: true
 
+    - name: Open Jenkins port (22) in firewall (if ufw is enabled)
+      ufw:
+        rule: allow
+        port: '22'
+        proto: tcp
+      ignore_errors: yes
+      become: true
+
     - name: Reload ufw
       command: ufw reload
       ignore_errors: yes
